Rewrite some explanations

--- a/Unit 3 - NumPy.ipynb
+++ b/Unit 3 - NumPy.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.__version__"
+    "np.__version__"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "\n",
     "### Array characteristics\n",
     "\n",
-    "An array appears to be very similar to a list, but an array can keep only elements of the same type (whereas a list can mix dfferent kinds of objects). This means arrays are more eﬃcient to store (because we don’t need to store the type for every element). It also makes arrays the data structure of choice for numerical calculations where we often deal with vectors and matrices."
+    "An array appears to be very similar to a list, but an array can keep only elements of the same type (whereas a list can mix different kinds of objects). This means arrays are more efficient to store (because we don't need to store the type for every element). It also makes arrays the data structure of choice for numerical calculations."
    ]
   },
   {
@@ -148,9 +148,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The biggest (and most useful) difference between arrays and lists are that you can apply a calculation to every number in the sequence with one statement!\n",
+    "The biggest (and most useful) difference between arrays and lists are that you can apply a calculation to every number in the sequence with one statement (i.e. _broadcasting_)!\n",
     "\n",
-    "This simple example illustrates _broadcasting_. Instead of duplicating the object (as with lists), every element in the array participates in the multiplication. Two dimensions are compatible when they have exactly the same shape, or one of them has a shape of 1."
+    "Consider this next example. Instead of duplicating the object (as with lists), every element in the array is multiplied. Two dimensions are compatible when they have exactly the same shape, or one of them has a shape of 1."
    ]
   },
   {
@@ -168,15 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1*np.array([2, 3, 5])\n",
-    "# This also works, but it is less computationally efficient"
+    "x1*np.array([2, 3, 5])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use `math` if to do simple comutations with only scalars, but `numpy` for lists, matrices, arrays, or large datasets. It also contains the same functions (and more)."
+    "We use `math` if to do simple comutations with only scalars, but `numpy` for lists, arrays, matrices,  or large datasets. It also contains the same functions (and more)."
    ]
   },
   {
@@ -218,9 +217,9 @@
    },
    "outputs": [],
    "source": [
-    "a1 = np.arange(0, 10, 2)   # creates values in steps of 2 from 0 to 10\n",
-    "a2 = np.linspace(0, 10, 5) # 5 values linearly spaced from 0 to 10\n",
-    "a3 = np.logspace(0, 10, 5) # 5 values logarithmically spaced from 0 to 10\n",
+    "a1 = np.arange(0, 10, 2)   # creates values from 0 to 10 in steps of 2 \n",
+    "a2 = np.linspace(0, 10, 5) # creates 5 values linearly spaced from 0 to 10 \n",
+    "a3 = np.logspace(0, 10, 5) # creates 5 values logarithmically spaced from 0 to 10\n",
     "\n",
     "print(\"{}, \\n{}, \\n{}\".format(a1, a2, a3))"
    ]
@@ -251,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vec = np.arange(2, 11.0) # If any value is an int, the array will only contain integers\n",
+    "vec = np.arange(2, 11.0) # If any value is a float, the array will only contain floats\n",
     "vec"
    ]
   },
@@ -307,8 +306,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "old = np.array([1, 2, 3, 4])\n",
     "\n",
     "a = old.copy()\n",
@@ -317,7 +323,7 @@
     "d = copy.copy(old)\n",
     "e = copy.deepcopy(old)\n",
     "\n",
-    "old[-1] = 49\n",
+    "old[-1] = 100\n",
     "\n",
     "print(\"original: {}\\n list.copy(): {}\\n slice: {}\\n list(): {}\\n copy: {}\\n deepcopy: {}\"\n",
     "      .format(old, a, b, c, d, e))"
@@ -330,8 +336,8 @@
     "### Growing arrays\n",
     "\n",
     "<span style=\"color:red\"> **Warning:** </span> When appending only once, using `np.append` on your array should be fine. The drawback of this approach is that memory is allocated for a *completely new array* every time it is called. When growing an array for a significant amount of samples it would be better to either:\n",
-    " + append to a list and convert to an array afterward or,\n",
-    " + pre-allocate the array (if the total size is known) e.g. by making an array of only ones or zeros.\n",
+    " + append to a list and convert to an array afterwards, or\n",
+    " + make an array of only ones or zeros (if you know how long it should be) and then replace the values.\n",
     " \n",
     "(Answer from [StackOverflow](https://stackoverflow.com/questions/7332841/add-single-element-to-array-in-numpy))."
    ]
@@ -364,29 +370,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lys = []\n",
-    "for i in range(10000):\n",
-    "    lys.append(i)\n",
-    "arr = np.array(lys)\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make an array of the correct length, consisting only of zeros, then change every value in the loop\n",
-    "n = 10000\n",
-    "arr = np.zeros(n)\n",
-    "print(arr)\n",
-    "\n",
-    "for i in range(n):\n",
-    "    arr[i] = i\n",
-    "arr"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -414,6 +398,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lys = []\n",
+    "for i in range(10000):\n",
+    "    lys.append(i)\n",
+    "arr = np.array(lys) # convert the list to an array\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make an array of the correct length, consisting only of zeros, then change every value in the loop\n",
+    "n = 10000\n",
+    "arr = np.zeros(n)\n",
+    "\n",
+    "for i in range(n):\n",
+    "    arr[i] = i\n",
+    "arr"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -426,7 +438,7 @@
     " + Reshaping a 1-D array\n",
     " + Making a meshgrid (useful for plotting; see next unit)\n",
     " \n",
-    "Note: It is no longer recommended to use np.matrix, even for linear algebra. Instead use regular arrays. The class may be removed in the future."
+    "Note: It is no longer recommended to use np.matrix, even for linear algebra. Instead use regular arrays. [The class may be removed in the future.](https://numpy.org/doc/stable/reference/generated/numpy.matrix.html)"
    ]
   },
   {
@@ -499,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Meshgrid forms 2 matrices, as illustrated below. Essentially, if you were to make a 3-D plot, you require a grid of points on the XY-plane. The xx matrix therefore represents the x-coordinates over that grid. \n",
+    "Meshgrid forms 2 matrices, as illustrated below. Essentially, if you were to make a 3-D plot, you require a grid of points on the XY-plane. The XX matrix therefore represents the x-coordinates over that grid. \n",
     "\n",
     "![](Assets/Meshgrid.png)\n",
     "\n",
@@ -513,11 +525,11 @@
    "outputs": [],
    "source": [
     "x = [1, 2, 3, 4]\n",
-    "y = [5, 6, 7]\n",
-    "xx, yy = np.meshgrid(x, y)\n",
-    "print(xx)\n",
+    "y = [7, 5, 6]\n",
+    "XX, YY = np.meshgrid(x, y)\n",
+    "print(XX)\n",
     "print('')\n",
-    "print(yy)"
+    "print(YY)"
    ]
   },
   {
@@ -526,7 +538,7 @@
    "source": [
     "### Indexing matrices\n",
     "\n",
-    "Remember how we indexed nested lists in Unit 1? The same principle applies here"
+    "Remember how we indexed nested lists in Unit 1? The same principle applies here."
    ]
   },
   {
@@ -536,13 +548,14 @@
    "outputs": [],
    "source": [
     "A = np.array([[ 7, 4,  5, 12],\n",
-    "              [-5, 8,  9,  0],\n",
-    "              [-6, 3, 11, 19]])\n",
+    "              [-5, 8,  1,  0],\n",
+    "              [-6, 7,  9, 10]])\n",
     "\n",
     "print(A[0]) # 1st row\n",
     "print(A[0][0]) # 1st row, 1st column\n",
     "print(A[0, 0]) # also acceptable\n",
-    "print(A[-1][1:3]) # last row, slice from 1st to 3rd comma"
+    "print(A[-1][1:3]) # last row, slice from 1st to 3rd comma\n",
+    "print(A[:][0]) # 1st row"
    ]
   },
   {
@@ -562,7 +575,7 @@
     "print(A[::, 0]) # also acceptable\n",
     "print('----')\n",
     "print(A[0:4, 0:4]) # entire matrix\n",
-    "print(A[:2, :3]) # first 3 columns from first 2 rows"
+    "print(A[:2, :3]) # first 2 rows; first 3 columns "
    ]
   },
   {
@@ -573,7 +586,7 @@
     "\n",
     "Let's consider the addition, multiplication and transposition of matrices.\n",
     "\n",
-    "Remember multiplication is only possible if the columns of the first matrix equals the rows of the second matrix. "
+    "Remember multiplication is only possible if the number of columns in the first matrix equals the number of rows in the second matrix. "
    ]
   },
   {
@@ -615,6 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# both accepted\n",
     "print(A.transpose())\n",
     "print(A.T)"
    ]
@@ -645,7 +659,7 @@
     "\n",
     "$ Ax = b $\n",
     "\n",
-    "If the system is well-determined, use `LA.solve()` to solve it. If the system is under-, over-determined use the `LA.lstsq()` function to return the least-squares solution to a linear matrix equation. We will also calculate the determinant, inverse, eigenvalue, eigenvector and 1st order norm of the matrix A.\n",
+    "If the system is well-determined, use `LA.solve()` to solve it. If the system is under-, over-determined use the `LA.lstsq()` function to return the least-squares solution to a linear matrix equation. We will also calculate the determinant, inverse, eigenvalue, eigenvector and first order norm of the matrix $A$.\n",
     "\n",
     "Try changing just 1 element in the system and see how it affects the results!"
    ]
@@ -727,7 +741,7 @@
     "\n",
     "For numerical evaluations of polynomials, NumPy provides \"convenience classes\" for quick calculations, including root-finding and curve-fitting. See the [docs](https://docs.scipy.org/doc/numpy/reference/routines.polynomials.classes.html).\n",
     "\n",
-    "For information on *plotting, symbolic calculations and nonlinear curve-fitting* see the following units.\n",
+    "For information on *plotting, symbolic calculations and nonlinear curve-fitting* see the next Units.\n",
     "\n",
     "First, let's define $ p(x) = 1 + 2x + 4x^3 $"
    ]
@@ -764,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To fit a polynomial to data with `np.polyfit`, specify the x and y data, as well as the order of the polynomial. The output will be the coefficients with the highest power first."
+    "To fit a polynomial to data with `np.polyfit`, specify the x- and y-data, as well as the order of the polynomial. The output will be the coefficients with the highest power first."
    ]
   },
   {
@@ -819,7 +833,7 @@
    "source": [
     "# Citation\n",
     "\n",
-    "If NumPy contributes to a scientific publication, cite it as follows:\n",
+    "If NumPy contributes to a scientific publication, you may cite it as follows:\n",
     "\n",
     "Oliphant, TE (2006) _A guide to NumPy_, Trelgol Publishing, USA.\n",
     "\n",
@@ -852,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.11"
   },
   "toc": {
    "base_numbering": 1,
