Revision after lecture

--- a/Tutorial exercises/Tut 2 - Iteration.ipynb
+++ b/Tutorial exercises/Tut 2 - Iteration.ipynb
@@ -20,7 +20,7 @@
     "The future value of an investment can be calculated by \n",
     "$ F = P(1+i)^n$\n",
     "\n",
-    "Suppose that R 100 000 ($P$) is invested at an interest rate of 5 % ($i$) over 8 years ($n$). For every year, print the year and the accumulated interest accrued on the initial investment. Round to the nearest cent."
+    "Suppose that R 100 000 ($P$) is invested at an interest rate of 5 % ($i$) over 8 years ($n$). For every year, print the year and the accumulated interest accrued on the initial investment ($F - P$). Keep $P$ as the original value. Round to the nearest cent."
    ]
   },
   {
@@ -82,7 +82,7 @@
     "\n",
     "$$ C_{pL} = C_1 + C_2T + C_3T^2 + C_4T^3 + C_5T^4 $$\n",
     "\n",
-    "There are between 1 and 5 constants tabulated in the handbook for each of the 345 different compounds, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in KJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given temperature is out of the acceptable range. \n",
+    "There are between 1 and 5 constants tabulated in the handbook for each of the 345 different compounds, with upper and lower temperatures for acceptable use. Write a function that can compute the heat capacity (in kJ/(kmol K), rounded to 2 decimal places) for the following compounds at a certain temperature. However, it must display a warning if the given temperature is out of the acceptable range. \n",
     "\n",
     "Do not:\n",
     " - Change the given lists below (e.g. by adding zeros); use them as the input\n",
