--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -112,6 +112,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note that you can assign any name to the individual elements\n",
+    "\n",
+    "for Piet in range(6):\n",
+    "    print(Piet*2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -129,7 +141,7 @@
     "a = 10\n",
     "b = 20\n",
     "c = 10*2\n",
-    "d = 40.0//2\n",
+    "d = 40/2\n",
     "d"
    ]
   },
@@ -283,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 30\n",
+    "a = 31\n",
     "\n",
     "# This program will check if a is divisible by 2, 3, and 5.\n",
     "if (a % 2 == 0): \n",
@@ -335,10 +347,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pass and continue have the same effect, while break just stops it\n",
+    "# pass and continue have the same effect here, while break just stops it\n",
     "for i in range(3):\n",
     "    print(i)\n",
-    "    pass #continue #break"
+    "    break #pass #continue "
    ]
   },
   {
@@ -381,10 +393,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(2, 10):\n",
+    "    if num % 2 == 0:\n",
+    "        print(\"Even number  :\", num)\n",
+    "    else:\n",
+    "        print(\"Uneven number:\", num)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice how an `else` may be used in this next example. There is no value in `range(2,2)`; thus, the for loop acts like an `if`. Since the first line returns `False`, the `else` statement is executed next."
+    "Notice how an `else` can be used after a for loop in these next [examples](https://docs.python.org/3/tutorial/controlflow.html#break-and-continue-statements-and-else-clauses-on-loops). "
    ]
   },
   {
@@ -393,16 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i in range(2,2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(2,2):\n",
+    "for i in range(121,123):\n",
     "    print(i)\n",
     "else:\n",
     "    print('spam')"
@@ -418,7 +434,7 @@
     "    for j in range(2, i): # if j is in this range, else print that it's a prime number\n",
     "        if i % j == 0:\n",
     "            print('{} = {}*{}'.format(i, j, i//j))\n",
-    "            break \n",
+    "            break # this breaks out of the loop without entering the else clause\n",
     "    else:\n",
     "        # loop fell through without finding a factor\n",
     "        print(i, 'is a prime number')"
@@ -456,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "multiplier(5, 6)"
+    "multiplier(79,5)"
    ]
   },
   {
@@ -495,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note, functions do not _require_ arguments, a docstring, or even a return statement. It will technically then return the `None` object."
+    "Note, functions do not _require_ parameters, a docstring, or even a return statement. It will technically then return the `None` object."
    ]
   },
   {
@@ -574,6 +590,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiplier(3,5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -594,30 +619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 5 types of parameters that a function can accept. (The following is [copied directly from the docs](https://docs.python.org/3/glossary.html#term-parameter)):\n",
-    "\n",
-    "1. positional-or-keyword: specifies an argument that can be passed either positionally or as a keyword argument. This is the **default** kind of parameter, for example `foo` and `bar` in the following:\n",
-    "- `def func(foo, bar=None): ...`\n",
-    "\n",
-    "2. positional-only: specifies an argument that can be supplied only by position. Positional-only parameters can be defined by including a `/` character in the parameter list of the function definition after them, for example `posonly1` and `posonly2` in the following:\n",
-    "- `def func(posonly1, posonly2, /, positional_or_keyword): ...`\n",
-    "\n",
-    "3. keyword-only: specifies an argument that can be supplied only by keyword. Keyword-only parameters can be defined by including a single var-positional parameter or bare `*` in the parameter list of the function definition before them, for example `kw_only1` and `kw_only2` in the following:\n",
-    "- `def func(arg, *, kw_only1, kw_only2): ...`\n",
-    "\n",
-    "4. var-positional: specifies that an arbitrary sequence of positional arguments can be provided (in addition to any positional arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `*`, for example `args` in the following:\n",
-    "- `def func(*args, **kwargs): ...`\n",
-    "\n",
-    "5. var-keyword: specifies that arbitrarily many keyword arguments can be provided (in addition to any keyword arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `**`, for example `kwargs` in the example above.\n",
-    "\n",
-    "Parameters can specify both **optional** and **required** arguments, as well as *default values* for some optional arguments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This next example uses the positional-or-keyword parameters. Default values for `m` and `c` are defined, but they can be overriden."
+    "In the next example, default values for `m` and `c` are defined, but they can be overriden."
    ]
   },
   {
@@ -635,6 +637,29 @@
     "print(straight_line(5, 2)) # this is assumed to be m\n",
     "print(straight_line(x=5, m=2, c=-3))\n",
     "print(straight_line(5, c=-3, m=2)) # note that you can swap the order of the keyword arguments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are 5 types of parameters that a function can accept. (The following is [copied from the docs](https://docs.python.org/3/glossary.html#term-parameter)):\n",
+    "\n",
+    "1. positional-or-keyword: specifies an argument that can be passed either positionally or as a keyword argument. This is the **default** kind of parameter, for example `foo` and `bar` in the following:\n",
+    "- `def func(foo, bar=1): ...`\n",
+    "\n",
+    "2. positional-only: specifies an argument that can be supplied only by position. Positional-only parameters can be defined by including a `/` character in the parameter list of the function definition after them, for example `posonly1` and `posonly2` in the following:\n",
+    "- `def func(posonly1, posonly2, /, positional_or_keyword): ...`\n",
+    "\n",
+    "3. keyword-only: specifies an argument that can be supplied only by keyword. Keyword-only parameters can be defined by including a single var-positional parameter or bare `*` in the parameter list of the function definition before them, for example `kw_only1` and `kw_only2` in the following:\n",
+    "- `def func(arg, *, kw_only1, kw_only2): ...`\n",
+    "\n",
+    "4. var-positional: specifies that an arbitrary sequence of positional arguments can be provided (in addition to any positional arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `*`, for example `args` in the following:\n",
+    "- `def func(*args, **kwargs): ...`\n",
+    "\n",
+    "5. var-keyword: specifies that arbitrarily many keyword arguments can be provided (in addition to any keyword arguments already accepted by other parameters). Such a parameter can be defined by prepending the parameter name with `**`, for example `kwargs` in the example above.\n",
+    "\n",
+    "Parameters can specify both **optional** and **required** arguments, as well as *default values* for some optional arguments. More examples are available [here](https://docs.python.org/3/tutorial/controlflow.html#special-parameters)."
    ]
   },
   {
@@ -657,7 +682,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can infer that your argument is any type of variable when defining it. Just make sure that the user is aware of it too. Below, I assume the argument `q` is a list/tuple."
+    "You can infer that your argument is any type of variable when defining it. Just make sure that the user is aware of it too. Below, I assume the parameter `q` is a list/tuple."
    ]
   },
   {
