Rename notebooks. Add Tut 3

--- a/Tutorial exercises/Tut 2 - Iteration.ipynb
+++ b/Tutorial exercises/Tut 2 - Iteration.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "d) Rewrite your while loop routine as a function named `maclaurin_cos(x)`. Keep the same tolerance as in b). Evaluate `cos(2)` with both `math` and your function.\n",
     "\n",
-    "e) Notice that when you evaluate `maclaurin_cos(50)`, you'll get -35363! Determine for which positive integer values of $x$, the difference between `cos()` and `maclaurin_cos()` is smaller than $1.0 \\times 10^{-10}$. Hint: remember to use the absolute value. Answer: $ x \\in [0, 14]$"
+    "e) Notice that when you evaluate `maclaurin_cos(50)`, you'll get -35363! Determine for which positive integer values of $x$, the difference between `cos()` and `maclaurin_cos()` is smaller than $1.0 \\times 10^{-10}$. Hint: remember to use the absolute value. Answer: $ [0, 1, 2,...,12, 13, 14]$"
    ]
   },
   {
@@ -90,7 +90,9 @@
     " \n",
     "Answer: \n",
     "- For water at 400 K, $C_{pL}$ = 76.78 kJ/(kmol K)\n",
-    "- For toluene at 400 K, $C_{pL}$ = 190.42 kJ/(kmol K)"
+    "- For toluene at 400 K, $C_{pL}$ = 190.42 kJ/(kmol K)\n",
+    "\n",
+    "Perry, RH and Green, DW (2008), _Perry's Chemical Engineers' Handbook_, 8th edition, McGraw-Hill, New York, ISBN-10: 0071422943."
    ]
   },
   {
