Add extra summation example
Revise some examples after the lecture

--- a/Unit 1 - Basic syntax.ipynb
+++ b/Unit 1 - Basic syntax.ipynb
@@ -722,9 +722,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lys = [4, -6.3, 'dog', [7, 8, 9]] # they can contain various types of data\n",
-    "lys2 = [50, 51, 52]\n",
-    "lys + lys2"
+    "lst = [4, -6.3, 'dog', [7, 8, 9]] # they can contain various types of data\n",
+    "lst2 = [50, 51, 52]\n",
+    "lst + lst2"
    ]
   },
   {
@@ -733,10 +733,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lys2.remove(50)\n",
-    "print(min(lys2))\n",
-    "print(max(lys2))\n",
-    "lys2"
+    "lst2.remove(50)\n",
+    "print(min(lst2))\n",
+    "print(max(lst2))\n",
+    "lst2"
    ]
   },
   {
