--- a/Unit 2 - Iteration.ipynb
+++ b/Unit 2 - Iteration.ipynb
@@ -91,10 +91,10 @@
    "source": [
     "A = \"Cool\"\n",
     "\n",
-    "lys = [] # create an empty list\n",
+    "lst = [] # create an empty list\n",
     "for i in A:\n",
-    "    lys.append(i)\n",
-    "print(lys)"
+    "    lst.append(i)\n",
+    "print(lst)"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "# x = 0.0 \n",
-    "# while not x == 1.0: # Never compare two floats!!!!\n",
+    "# while not x == 1.0: # Never compare two floats like this!\n",
     "#     x = x + 0.1 \n",
     "#     print(x)"
    ]
@@ -186,7 +186,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rather compare the absolute error, or rewrite it into a for loop:"
+    "Instead, you can:\n",
+    "- rewrite it into a for loop\n",
+    "- compare the absolute error (of the difference between the sum and a known answer)\n",
+    "- compare the absolute value of terms that decrease in magnitude to a specific tolerance"
    ]
   },
   {
@@ -196,7 +199,7 @@
    "outputs": [],
    "source": [
     "x = 0.0 \n",
-    "while abs(x - 0.5) > 1e-8: \n",
+    "while abs(x - 1) > 1e-8: \n",
     "    x = x + 0.1 \n",
     "    print(round(x, 1))"
    ]
@@ -207,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, 6): \n",
+    "for i in range(1, 11): \n",
     "    x = i*0.1 \n",
     "    print(round(x, 1))"
    ]
@@ -231,6 +234,47 @@
     "# while 1.0 + ϵ > 1.0: \n",
     "#     ϵ = ϵ / 2.0 \n",
     "#     print(ϵ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the following series and compare how a _for_ or _while_ loop can be used to approximate the sum\n",
+    "\n",
+    "$$ \\sum^{\\infty}_{n=0} \\frac{(-1)^n}{2^n} = \\frac{2}{3} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "term_list = []\n",
+    "for n in range(100): # try with just 30 terms \n",
+    "    term = (-1)**n/2**n\n",
+    "    total = total + term\n",
+    "    term_list.append(term) \n",
+    "print(total)\n",
+    "# print(term_list) # shows how the successive terms decrease"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "n = 0\n",
+    "while abs(total - 2/3) >= 1e-16: # try a smaller tolerance like 1e-10\n",
+    "    term = (-1)**n/2**n\n",
+    "    total = total + term\n",
+    "    n = n + 1\n",
+    "#     print(n, total) \n",
+    "print(n, total)"
    ]
   },
   {
@@ -295,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 31\n",
+    "a = 30\n",
     "\n",
     "# This program will check if a is divisible by 2, 3, and 5.\n",
     "if (a % 2 == 0): \n",
@@ -472,7 +516,7 @@
    },
    "outputs": [],
    "source": [
-    "multiplier(79,5)"
+    "multiplier(5,6)"
    ]
   },
   {
@@ -864,7 +908,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import interact\n",
+    "from ipywidgets import interact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "interact(square, num=5)"
    ]
   },
