--- a/Unit 3 - Numerical calculations (NumPy).ipynb
+++ b/Unit 3 - Numerical calculations (NumPy).ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "# If you include 1 float, all integers will become floats\n",
-    "x2 = np.array([4, 5, 6.0])\n",
+    "x2 = np.array([4, 5.0, 6])\n",
     "x2"
    ]
   },
@@ -151,6 +151,16 @@
     "The biggest (and most useful) difference between arrays and lists are that you can apply a calculation to every number in the sequence with one statement (i.e. _broadcasting_)!\n",
     "\n",
     "Consider this next example. Instead of duplicating the object (as with lists), every element in the array is multiplied. Two dimensions are compatible when they have exactly the same shape, or one of them has a shape of 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1, 2, 3]\n",
+    "lst*2"
    ]
   },
   {
@@ -235,6 +245,38 @@
     "a6 = np.random.randint(1, 7, size=10) # 10 integers between 1 and 7\n",
     "\n",
     "print(\"{}, \\n{}, \\n{}\".format(a4, a5, a6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare how much faster arrays make calculations, instead of appending to lists:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(2*np.pi)\n",
+    "\n",
+    "lst = []\n",
+    "for x in range(0, 628):\n",
+    "    x = x/100 # creates floats from 0 to 6.28\n",
+    "    lst.append(np.sin(x))\n",
+    "# print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 2*np.pi, 628)\n",
+    "# np.sin(x)"
    ]
   },
   {
@@ -335,8 +377,8 @@
    "source": [
     "### Growing arrays\n",
     "\n",
-    "<span style=\"color:red\"> **Warning:** </span> When appending only once, using `np.append` on your array should be fine. The drawback of this approach is that memory is allocated for a *completely new array* every time it is called. When growing an array for a significant amount of samples it would be better to either:\n",
-    " + append to a list and convert to an array afterwards, or\n",
+    "<span style=\"color:red\"> **Warning:** </span> When appending only once, using `np.append` on your array should be fine. The drawback of this approach is that memory is allocated for a *completely new array* every time it is called. When growing an array for a significant number of values, it would be better to either:\n",
+    " + append to a list and convert it to an array afterwards, or\n",
     " + make an array of only ones or zeros (if you know how long it should be) and then replace the values.\n",
     " \n",
     "(Answer from [StackOverflow](https://stackoverflow.com/questions/7332841/add-single-element-to-array-in-numpy))."
@@ -366,13 +408,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -391,23 +426,18 @@
     "print('')\n",
     "\n",
     "x = np.array([10, 20, 30, 40, 50, 60])\n",
-    "print(x)\n",
     "print(np.zeros_like(x))\n",
     "print(np.ones_like(x))\n",
     "print(np.full_like(x, 43))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lys = []\n",
-    "for i in range(10000):\n",
-    "    lys.append(i)\n",
-    "arr = np.array(lys) # convert the list to an array\n",
-    "arr"
+    "Let's revisit the sum from Unit 2, but now use arrays.\n",
+    "\n",
+    "$$ \\sum^{10000}_{n=0} \\frac{(-1)^n}{2^n} \\approx \\frac{2}{3} $$"
    ]
   },
   {
@@ -416,13 +446,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make an array of the correct length, consisting only of zeros, then change every value in the loop\n",
-    "n = 10000\n",
-    "arr = np.zeros(n)\n",
+    "lst = []\n",
+    "num = 10000\n",
+    "for n in range(num):\n",
+    "    term = (-1)**n/2**n\n",
+    "    lst.append(term)\n",
+    "arr = np.array(lst) # convert the list to an array\n",
+    "# print(arr)\n",
+    "arr.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make an array of the correct length, consisting only of zeros, then replace every 0 with the next term\n",
+    "arr = np.zeros(num)\n",
     "\n",
-    "for i in range(n):\n",
-    "    arr[i] = i\n",
-    "arr"
+    "for n in range(num):\n",
+    "    arr[n] = (-1)**n/2**n\n",
+    "arr.sum()"
    ]
   },
   {
@@ -617,7 +662,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(A @ B) # preferred\n",
+    "print(A @ B) # preferred notation for computing the matrix product\n",
     "\n",
     "print(A.dot(B)) # Note that this notation is preferred for the dot product of arrays"
    ]
@@ -657,7 +702,7 @@
     "\n",
     "Lastly let's illustrate the computational capabilities of the `linalg` submodule. Consider the system of linear equations given by \n",
     "\n",
-    "$ Ax = b $\n",
+    "$$ Ax = b $$\n",
     "\n",
     "If the system is well-determined, use `LA.solve()` to solve it. If the system is under-, over-determined use the `LA.lstsq()` function to return the least-squares solution to a linear matrix equation. We will also calculate the determinant, inverse, eigenvalue, eigenvector and first order norm of the matrix $A$.\n",
     "\n",
