Add minor clarifications after lecture

--- a/Unit 1 - Basic syntax.ipynb
+++ b/Unit 1 - Basic syntax.ipynb
@@ -502,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dir(math)\n",
@@ -1076,7 +1078,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A[0:9] # this returns a slice of A from slice position 0 to slice position 8"
+    "A[0:4] # this returns a slice of A from slice position 0 to slice position 4"
    ]
   },
   {
@@ -1085,7 +1087,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A[0:9:2] # slice in steps of 2\n",
+    "A[::] # leaving out the numbers will use the default values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A[0:7:2] # slice in steps of 2\n",
     "# A[::2] # gives the same answer"
    ]
   },
@@ -1159,7 +1170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(enumerate([53, 12, 42, 97, 80])"
+    "list(enumerate([53, 12, 42, 97, 80]))"
    ]
   },
   {
@@ -1230,6 +1241,24 @@
     "# if you haven't imported pi above yet\n",
     "from math import pi\n",
     "print(pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = round(pi, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Pi is approximately {}\".format(p))"
    ]
   },
   {
