--- a/Unit 3 - Numerical calculations (NumPy).ipynb
+++ b/Unit 3 - Numerical calculations (NumPy).ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,9 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n",
+      "2.718281828459045\n",
+      "inf\n",
+      "nan\n"
+     ]
+    }
+   ],
    "source": [
     "# Mathematical constants\n",
     "print(np.pi)\n",
@@ -229,7 +240,7 @@
    "source": [
     "a1 = np.arange(0, 10, 2)   # creates values from 0 to 10 in steps of 2 \n",
     "a2 = np.linspace(0, 10, 5) # creates 5 values linearly spaced from 0 to 10 \n",
-    "a3 = np.logspace(0, 10, 5) # creates 5 values logarithmically spaced from 0 to 10\n",
+    "a3 = np.logspace(0, 2, 5) # creates 5 values equally spaced with the eponents specified\n",
     "\n",
     "print(\"{}, \\n{}, \\n{}\".format(a1, a2, a3))"
    ]
